Changed front text

--- a/fans/index.html
+++ b/fans/index.html
@@ -70,9 +70,9 @@
     <div class="container">
         <div class="row vh-md-100">
             <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
-                <h1 class="heading-black text-capitalize">The Music you Love, on your terms.</h1>
+                <h1 class="heading-black text-capitalize">Get closer to your favourite creator.</h1>
                 <p class="lead py-3">Demu is the new music streaming platform that gives back to the artists.
-                    By listening to music you directly help your favourite creators.</p>
+                    By listening to music you directly help your favourite creators, and earn their tokens!</p>
                 <!-- Begin Mailchimp Signup Form -->
                 <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
                 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
