--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/img/favicon.png" sizes="32x32">
-    <title>Demu - Decentralized Music Streaming</title>
+    <title>Demu - Decentralized Music Streaming for musicians</title>
     <meta name="description"
-          content="Decentralized music streaming network shifting power to artists."/>
+          content="Decentralized music streaming bringing communities closer together through the power of blockchain technology. Become early adopter now!"/>
 
     <!--Inter UI font-->
     <link href="https://rsms.me/inter/inter-ui.css" rel="stylesheet">
