--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!--hero header-->
 <section class="py-7 py-md-0 bg-hero" id="home">
         <div class="row vh-md-90">
-            <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center"> 
+            <div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center">
             <div class="circle-content" >
                 <div class="circle" id="circle">
                     <div class="left" onmouseover="focusLeftItem()" onmouseout="unFocusLeftItem()" id="left_circle" onclick="window.location.href='/fans'"></div>
@@ -56,14 +56,15 @@
                     <p id="right_text" class="right-text">CREATORS</p>
                 </div>
             </div>
-            
+
         </div>
-            
+
         </div>
 </section>
 <br>
-<div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center"> 
-    <a href="https://medium.com/@markus_41986/how-we-plan-to-use-blockchain-technology-to-revolutionize-the-creator-economy-8f8fe5793a42" class="btn btn-primary d-inline-flex flex-row align-items-center" style="box-shadow: none; z-index: 50000000000000000000;" target="_blank">our mission</a>
+<div class="col-md-8 col-sm-10 col-12 mx-auto my-auto text-center d-flex justify-content-center">
+    <a href="https://medium.com/@markus_41986/how-we-plan-to-use-blockchain-technology-to-revolutionize-the-creator-economy-8f8fe5793a42" class="btn btn-primary d-inline-flex flex-row align-items-center" style="box-shadow: none; z-index: 50000000000000000000;margin:5px;" target="_blank">our mission</a>
+    <a href="mailto:markus@demu.app?subject=I%20have%20a%20question" class="btn btn-primary d-inline-flex flex-row align-items-center" style="box-shadow: none; z-index: 50000000000000000000;margin:5px;" target="_blank">Any questions?</a>
 </div>
 
 
